[gd_scene load_steps=7 format=2]

[ext_resource path="res://dialogue/Dialogue.gd" type="Script" id=1]
[ext_resource path="res://fonts/CardenioModern-Bold.otf" type="DynamicFontData" id=2]
[ext_resource path="res://dialogue/text.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 25
use_mipmaps = true
use_filter = true
extra_spacing_char = 1
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 20
use_mipmaps = true
use_filter = true
extra_spacing_char = 2
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 55
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[node name="root" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Tp" type="Polygon2D" parent="."]
position = Vector2( 1024, 0 )
scale = Vector2( -1, 1 )
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( 0, 0, 1030, 0, 1030, 80, 0, 80 )

[node name="Btm" type="Polygon2D" parent="."]
position = Vector2( 0, 520 )
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( 0, 0, 1030, 0, 1030, 80, 0, 80 )

[node name="box" type="Polygon2D" parent="."]
position = Vector2( 10, 400 )
scale = Vector2( 0.970874, 1.25 )
color = Color( 0, 0, 0, 0.596078 )
polygon = PoolVector2Array( 0, 0, 1030, 0, 1030, 80, 0, 80 )

[node name="text" type="RichTextLabel" parent="box"]
margin_left = 21.0
margin_top = 8.0
margin_right = 1010.0
margin_bottom = 72.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
scroll_active = false
script = ExtResource( 3 )

[node name="TextTimer" type="Timer" parent="box"]
wait_time = 0.05
autostart = true

[node name="cineTimer" type="Timer" parent="box"]
wait_time = 0.5
one_shot = true
autostart = true

[node name="Button" type="Button" parent="box"]
margin_left = 883.0
margin_top = 104.0
margin_right = 983.0
margin_bottom = 152.0
custom_fonts/font = SubResource( 2 )

[node name="nameBox" type="Polygon2D" parent="."]
position = Vector2( 10, 340 )
scale = Vector2( 0.823529, 0.555555 )
color = Color( 0, 0, 0, 0.596078 )
polygon = PoolVector2Array( 0, 0, 0, 90, 170, 90, 170, 48.3969, 170, 0, 72.8571, 0 )

[node name="name" type="RichTextLabel" parent="nameBox"]
margin_left = 14.0
margin_right = 170.0
margin_bottom = 90.0
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
scroll_active = false
[connection signal="timeout" from="box/TextTimer" to="box/text" method="_on_TextTimer_timeout"]
[connection signal="timeout" from="box/cineTimer" to="box/text" method="_on_cineTimer_timeout"]
[connection signal="pressed" from="box/Button" to="box/text" method="_on_Button_pressed"]
